[package]
name = "quay-tui"
version = "0.1.0"
edition = "2021"
description = "A TUI port manager for local processes, SSH forwards, and Docker containers"
authors = ["matsushimakouta"]
license = "MIT"
repository = "https://github.com/shonenm/quay"
homepage = "https://github.com/shonenm/quay"
readme = "README.md"
keywords = ["tui", "port-manager", "docker", "ssh", "ratatui"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "quay"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.30"
crossterm = "0.29"

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
chrono = "0.4"
regex = "1"

# Config
toml = "0.8"
dirs = "5"

# cargo-dist configuration
[package.metadata.dist]
cargo-dist-version = "0.27.0"
ci = "github"
targets = [
    "x86_64-unknown-linux-musl",
    "aarch64-unknown-linux-musl",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin"
]
installers = ["shell", "homebrew"]
tap = "shonenm/homebrew-quay"
publish-jobs = ["homebrew"]
checksum = "sha256"

# cargo-deb configuration
[package.metadata.deb]
maintainer = "matsushimakouta"
copyright = "2025 matsushimakouta"
license-file = ["LICENSE", "0"]
extended-description = """\
Quay is a TUI port manager that provides a unified view of \
local processes, SSH port forwards, and Docker containers."""
section = "utils"
priority = "optional"
assets = [
    ["target/release/quay", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/quay/", "644"],
]

[profile.release]
opt-level = 3
lto = true
strip = true

[profile.dist]
inherits = "release"
lto = "thin"
